--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,18 +30,15 @@ jobs:
       - name: Extract arguments from new commits
         id: extract_args
         run: |
-          # Obtener los commits del PR
           COMMITS=$(curl -s "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits" | jq -r '.[].sha')
-
           ARGS=""
           for COMMIT in $COMMITS; do
             DIFF=$(git show $COMMIT -- src/assets/modules.json || true)
             NEW_KEYS=$(echo "$DIFF" | grep '^+' | grep '"key"' | sed -E 's/.*"key": *"([^"]+)".*/\1/' || true)
             ARGS="$ARGS $NEW_KEYS"
           done
-
           ARGS=$(echo "$ARGS" | tr -s ' ')
           echo "commit_args=$ARGS" >> $GITHUB_OUTPUT
 
-      - name: Run Python script with arguments
+      - name: Run check
         run: python api check ${{ steps.extract_args.outputs.commit_args }}
