--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
   update-modules-data:
     runs-on: ubuntu-latest
     permissions:
-      pages: write
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
