--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,24 +37,24 @@ jobs:
           echo "commit_args=$ARGS" >> $GITHUB_OUTPUT
 
       - name: Set up Python
-        if: steps.extract_args.outputs.commit_args != ''
+        if: ${{ steps.extract_args.outputs.commit_args != '' && steps.extract_args.outputs.commit_args != ' ' }}
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Install dependencies
-        if: steps.extract_args.outputs.commit_args != ''
+        if: ${{ steps.extract_args.outputs.commit_args != '' && steps.extract_args.outputs.commit_args != ' ' }}
         run: |
           python -m pip install --upgrade pip
           pip install -r api/requirements.txt
 
       - name: Run api build
-        if: steps.extract_args.outputs.commit_args != ''
+        if: ${{ steps.extract_args.outputs.commit_args != '' && steps.extract_args.outputs.commit_args != ' ' }}
         run: |
           python api build
 
       - name: Commit data
-        if: steps.extract_args.outputs.commit_args != ''
+        if: ${{ steps.extract_args.outputs.commit_args != '' && steps.extract_args.outputs.commit_args != ' ' }}
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Update modules data
