--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
             ARGS="$ARGS $NEW_KEYS"
           done
           ARGS=$(echo "$ARGS" | tr -s ' ')
+          ARGS_ESCAPED=$(echo "$ARGS" | sed 's/[\/&]/\\&/g')
           echo "commit_args=$ARGS" >> $GITHUB_OUTPUT
 
       - name: Run check
