--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,11 @@ jobs:
             ARGS="$ARGS $NEW_KEYS"
           done
           ARGS=$(echo "$ARGS" | tr -s ' ')
-          ARGS_ESCAPED=$(echo "$ARGS" | sed 's/[\/&]/\\&/g')
+          # reemplazar / por %2F
+          ARGS_ESCAPED=$(echo "$ARGS" | sed 's/\//%2F/g')
           echo "commit_args=$ARGS_ESCAPED" >> $GITHUB_OUTPUT
 
       - name: Run check
-        run: python api check ${{ steps.extract_args.outputs.commit_args }}
+        run: |
+          ARGS=$(echo ${{ steps.extract_args.outputs.commit_args }} | sed 's/%2F/\//g')
+          python api check $ARGS
