--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,12 +38,12 @@ jobs:
             ARGS="$ARGS $NEW_KEYS"
           done
           ARGS=$(echo "$ARGS" | tr -s ' ')
-          ARGS_ESCAPED=$(echo "$ARGS" | sed 's/\//__slash__/g')
-          ARGS_ESCAPED=$(echo "$ARGS_ESCAPED" | sed 's/-/__middle_dash__/g')
+          ARGS_ESCAPED=$(echo "$ARGS" | sed 's/\//XXslashXX/g')
+          ARGS_ESCAPED=$(echo "$ARGS_ESCAPED" | sed 's/-/XXmiddleXdashXX/g')
           echo "commit_args=$ARGS_ESCAPED" >> $GITHUB_OUTPUT
 
       - name: Run check
         run: |
-          ARGS=$(echo ${{ steps.extract_args.outputs.commit_args }} | sed 's/__slash__/\//g')
-          ARGS=$(echo $ARGS | sed 's/__middle_dash__/-/g')
+          ARGS=$(echo ${{ steps.extract_args.outputs.commit_args }} | sed 's/XXslashXX/\//g')
+          ARGS=$(echo $ARGS | sed 's/XXmiddleXdashXX/-/g')
           python api check $ARGS
