--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,10 +40,12 @@ jobs:
           ARGS=$(echo "$ARGS" | tr -s ' ')
           ARGS_ESCAPED=$(echo "$ARGS" | sed 's/\//XXslashXX/g')
           ARGS_ESCAPED=$(echo "$ARGS_ESCAPED" | sed 's/-/XXmiddleXdashXX/g')
+          ARGS_ESCAPED=$(echo "$ARGS_ESCAPED" | sed 's/_/XXdownXdashXX/g')
           echo "commit_args=$ARGS_ESCAPED" >> $GITHUB_OUTPUT
 
       - name: Run check
         run: |
           ARGS=$(echo ${{ steps.extract_args.outputs.commit_args }} | sed 's/XXslashXX/\//g')
           ARGS=$(echo $ARGS | sed 's/XXmiddleXdashXX/-/g')
+          ARGS=$(echo $ARGS | sed 's/XXdownXdashXX/_/g')
           python api check $ARGS
