--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,7 @@ jobs:
           ARGS_ESCAPED=$(echo "$ARGS" | sed 's/\//XXslashXX/g')
           ARGS_ESCAPED=$(echo "$ARGS_ESCAPED" | sed 's/-/XXmiddleXdashXX/g')
           ARGS_ESCAPED=$(echo "$ARGS_ESCAPED" | sed 's/_/XXdownXdashXX/g')
+          ARGS_ESCAPED=$(echo "$ARGS_ESCAPED" | sed 's/ /XXspaceXX/g')
           echo "commit_args=$ARGS_ESCAPED" >> $GITHUB_OUTPUT
 
       - name: Run check
@@ -48,4 +49,5 @@ jobs:
           ARGS=$(echo ${{ steps.extract_args.outputs.commit_args }} | sed 's/XXslashXX/\//g')
           ARGS=$(echo $ARGS | sed 's/XXmiddleXdashXX/-/g')
           ARGS=$(echo $ARGS | sed 's/XXdownXdashXX/_/g')
+          ARGS=$(echo $ARGS | sed 's/XXspaceXX/ /g')
           python api check $ARGS
