--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
+    "marked": "^15.0.6",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "vue": "^3.5.13",
